add/semantics fix/profilepic-padding

--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 </head>
 <body>
     
-    <div class="main-cont">
-        <div class="sub-cont" id="fary">
+    <section class="main-cont">
+
+        <article class="sub-cont" id="fary">
             <img class="profile-pic fary" src="./assets/images/fary.jpg" alt="fary">
             <p class="name"><b>Fary</b><span>6765 Shady Ln Dr</span></p>
-        </div>
+        </article>
 
         <hr>
 
-        <div class="sub-cont" id="manolo">
+        <article class="sub-cont" id="manolo">
             <img class="profile-pic manolo" src="./assets/images/manolo.jpg" alt="manolo">
             <p class="name"><b>Manolo</b><span>2420 Paddock Way</span></p> 
-        </div>
+        </article>
 
         <hr>
 
-
-        <div class="sub-cont" id="rocio">
+        <article class="sub-cont" id="rocio">
             <img class="profile-pic rocio" src="./assets/images/rocio.jpg" alt="rocio">
             <p class="name"><b>Rocío</b><span>6727 Airplane Ave</span></p>
-        </div>
+        </article>
 
         <hr>
 
-
-        <div class="sub-cont" id="lola">
+        <article class="sub-cont" id="lola">
             <img class="profile-pic lola" src="./assets/images/lola.jpg" alt="lola">
             <p class="name"><b>Lola</b><span>6685 Blossom Hill Rd</span></p>
-        </div>
-    </div>
+        </article>
+
+    </section>
 
 </body>
 </html>
